--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-altair
-pandas
 streamlit
+arxiv
+transformers
+accelerate
+bitsandbytes
+torch          
+feedparser 
+sqlite-utils 
+fastapi 
+uvicorn
+tiktoken
+keybert
+sentence-transformers
+scikit-learn
